Make sure there is no horizontal scrolling.

--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
 }
 
 #log-region {
-  max-width: 500px;
+  width: 500px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
